--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <it.fmt.reversi.android.ui.AppGridLayout
+        <it.fmt.games.reversi.android.ui.AppGridLayout
             android:layout_width="@integer/AppGridWidth"
             android:layout_height="@integer/AppGridHeight"
             android:layout_margin="12dp"
@@ -91,335 +91,335 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <!-- row 0 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board00"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/white_chess" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board01"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board02"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board03"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board04"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board05"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board06"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board07"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
             <!-- row 1 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board10"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board11"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board12"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board13"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board14"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board15"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board16"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board17"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
             <!-- row 2 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board20"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board21"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board22"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board23"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board24"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board25"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board26"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board27"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
             <!-- row 3 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board30"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board31"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board32"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/white_chess_t" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board33"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/black_chess" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board34"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/white_chess" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board35"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/black_chess_t" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board36"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board37"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
             <!-- row 4 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board40"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board41"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board42"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board43"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board44"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board45"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board46"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board47"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
             <!-- row 5 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board50"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board51"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board52"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board53"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board54"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board55"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board56"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board57"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
             <!-- row 6 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board60"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board61"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board62"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board63"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board64"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board65"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board66"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board67"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
             <!-- row 7 -->
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board70"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board71"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board72"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board73"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board74"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board75"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board76"
                 style="@style/AppGridItemLight"
                 app:srcCompat="@drawable/transparent" />
 
-            <it.fmt.reversi.android.ui.GridViewItem
+            <it.fmt.games.reversi.android.ui.GridViewItem
                 android:id="@+id/board77"
                 style="@style/AppGridItemDark"
                 app:srcCompat="@drawable/transparent" />
 
 
-        </it.fmt.reversi.android.ui.AppGridLayout>
+        </it.fmt.games.reversi.android.ui.AppGridLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!--    <GridView-->
