--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,33 +1,426 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".GameActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#FFFFE6"
+    android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="5dp"
+        android:visibility="visible">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo_256" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/black_256" />
 
-    <include layout="@layout/content_game" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/white_256" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        <TextView
+            android:id="@+id/blackNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <TextView
+            android:id="@+id/whiteNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <it.fmt.games.reversi.android.ui.AppGridLayout
+            android:id="@+id/gridLayout"
+            android:layout_width="@integer/AppGridWidth"
+            android:layout_height="@integer/AppGridHeight"
+            android:layout_margin="12dp"
+            android:background="@drawable/board_2048"
+            android:columnCount="8"
+            android:rowCount="8"
+            android:rowOrderPreserved="true"
+            android:useDefaultMargins="false"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- row 0 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board00"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board01"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board02"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board03"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board04"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board05"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board06"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board07"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <!-- row 1 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board10"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board11"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board12"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board13"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board14"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board15"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board16"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board17"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <!-- row 2 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board20"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board21"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board22"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board23"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board24"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board25"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board26"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board27"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <!-- row 3 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board30"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board31"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board32"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent"  />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board33"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent"
+                tools:srcCompat="@drawable/black_256"/>
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board34"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent"
+                tools:srcCompat="@drawable/white_256"/>
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board35"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent"  />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board36"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent"  />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board37"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <!-- row 4 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board40"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board41"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board42"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board43"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent"
+                tools:srcCompat="@drawable/white_256"/>
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board44"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent"
+                tools:srcCompat="@drawable/black_256"/>
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board45"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board46"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board47"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <!-- row 5 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board50"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board51"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board52"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board53"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board54"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board55"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board56"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board57"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <!-- row 6 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board60"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board61"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board62"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board63"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board64"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board65"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board66"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board67"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <!-- row 7 -->
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board70"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board71"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board72"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board73"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board74"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board75"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board76"
+                style="@style/AppGridItemLight"
+                app:srcCompat="@drawable/transparent" />
+
+            <it.fmt.games.reversi.android.ui.GridViewItem
+                android:id="@+id/board77"
+                style="@style/AppGridItemDark"
+                app:srcCompat="@drawable/transparent" />
+
+
+        </it.fmt.games.reversi.android.ui.AppGridLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
