--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -19,16 +19,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-
-
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="148dp"
-            android:layout_height="148dp"
+            android:layout_width="164dp"
+            android:layout_height="164dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_256" />
+            app:srcCompat="@drawable/logo" />
 
         <FrameLayout
             android:id="@+id/imageView2"
