--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
             android:tag="4"
-            android:text="CPU 1 vs. CPU"
+            android:text="CPU 1 vs. CPU 2"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/btnHumanVsHuman"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
             android:tag="2"
-            android:text="Player 1 vs. CPU"
+            android:text="Player 1 vs. CPU 2"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/btnCPUVsHuman"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo_256" />
+            app:srcCompat="@drawable/logo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
 
