--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/rounded_button"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
-            android:tag="4"
+            android:tag="CPU_VS_CPU"
             android:text="@string/cpu_vs_cpu"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +41,7 @@
             android:background="@drawable/rounded_button"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
-            android:tag="1"
+            android:tag="PLAYER_VS_PLAYER"
             android:text="@string/player1_vs_player2"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/btnCPUVsHuman"
@@ -58,7 +58,7 @@
             android:background="@drawable/rounded_button"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
-            android:tag="2"
+            android:tag="PLAYER_VS_CPU"
             android:text="@string/player1_vs_CPU2"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/btnHumanVsHuman"
@@ -75,7 +75,7 @@
             android:background="@drawable/rounded_button"
             android:paddingTop="24dp"
             android:paddingBottom="24dp"
-            android:tag="3"
+            android:tag="CPU_VS_PLAYER"
             android:text="@string/cpu_vs_player2"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/btnCPUVsCPU"
