--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="app_dark_blue">#0D47A1</color>
     <color name="app_light_blue">#078BE9</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
